fix overlap with footer

--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,6 +1,6 @@
 .profile {
     background-color: var(--bright-background-color);
-    margin: 14px 47px 16px 43px;
+    margin: 14px 47px 106px 43px;
     border-radius: 20px;
 }
 
